--- a/README.Rmd
+++ b/README.Rmd
@@ -42,7 +42,7 @@ To be completed
 
 
 #Developer
-Nick Bond n.bond@griffith.edu.au
+Nick Bond n.bond@latrobe.edu.au
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
