added new function

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ To install run the following code:
 
 #Example 
 
-To be completed
+ #To be completed
 
 <!--  The code below produces the following plot for Cooper Creek, a highly ephemeral river in western Queensland, Australia. The function uses geom_raster() from the ggplot2 package. Addtional options are available (see ?ctf_heatmap for details). -->
 <!-- ``` -->
